Closed Bug 508523 Opened 16 years ago Closed 16 years ago

Crash [@ nsDocAccessible::FlushPendingEvents]

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: neil, Assigned: neil)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Hit this while browsing, no STR, sorry. > NS_RELEASE_THIS(); // Release kung fu death grip > > // After a flood of events, reset so that user input flag is off > nsAccEvent::ResetLastInputState(); > > mInFlushPendingEvents = PR_FALSE; Crashed here; "this" might have been destroyed by NS_RELEASE_THIS above?
Blocks: 432467
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #392690 - Flags: review?(surkov.alexander)
Comment on attachment 392690 [details] [diff] [review] Possible patch (untested) r=me
Attachment #392690 - Flags: review?(surkov.alexander) → review+
Would this fix bug 488505?
Pushed changeset 42a364a99f95 to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Blocks: 488505
Flags: blocking1.9.2?
Nominate the patch for approval, not the bug for blocking, please.
Flags: blocking1.9.2? → blocking1.9.2-
Comment on attachment 392690 [details] [diff] [review] Possible patch (untested) Crash fix.
Attachment #392690 - Flags: approval1.9.2?
Comment on attachment 392690 [details] [diff] [review] Possible patch (untested) I took a look at the 1.9.2 source and this patch is already appplied. Canceling 1.9.2?
Attachment #392690 - Flags: approval1.9.2?
Crash Signature: [@ nsDocAccessible::FlushPendingEvents]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: