Bug 508523 Crash [@ nsDocAccessible::FlushPendingEvents] r=surkov